# dheap-simd

./: .gitignore  CMakeLists.txt  README.md
.github/: bench-thresholds.json
.github/workflows/: pr-test-bench.yml
bench/: bench_dheap4.cpp
include/: dheap4_simd.hpp
scripts/: bench_report.py  quantify_simd.py
src/: dheap4_simd.cpp
tests/: test_dheap4.cpp
